增加ajax请求实例

--- a/manifest.json
+++ b/manifest.json
@@ -199,7 +199,8 @@
 				"resources": [],
 				"refer": [
 					"AboutMe/aboutMe.html",
-					"ScreenPage/HospitalScreen.html"
+					"ScreenPage/HospitalScreen.html",
+					"ajax.html"
 				],
 				"priority": 0
 			}
